refactor: mise en conformité pour passage soutenace
