# Back-end/swagger.yaml
@@ -4,10 +4,10 @@ info:
   description: Contains all available API endpoints in this codebase
   version: "1.0.0"
   termsOfService: "http://swagger.io/terms/"
-host: "argentbank-bydelta13-api-c9d02df5fde5.herokuapp.com"
+host: localhost:3001
 basePath: /api/v1
 schemes:
-  - https
+  - http
 
 paths:
   /user/login:
